# fashion-tinder

backend/: .gitignore  pyproject.toml
backend/prompts/: prompts.py
backend/src/: first_req.py  main.py  trial.py
backend/src/db/: database.py  test_db.py
backend/src/prompts_dir/: prompts.py
backend/src/scripts/: image_generation.py
frontend/: how-to-install-tailwind.md  package.json
frontend/app/: _layout.tsx  index.tsx
frontend/components/: tinder-card.tsx  tinder-swipe.tsx
