[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.17.2",
    "fastapi[standard]>=0.124.4",
    "google-cloud-storage>=3.7.0",
    "google-genai>=1.55.0",
    "pillow>=12.0.0",
    "pillow-heif>=1.1.1",
    "psycopg>=3.3.2",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.45",
    "sqlmodel>=0.0.29",
    "uvicorn>=0.38.0",
]
